# klickbrick

./: .travis.yml  LICENSE  README.rst  pyproject.toml
features/: hello.feature  onboard.feature
features/steps/: hello.py
klickbrick/: __init__.py  klickbrick.py  script.py
klickbrick/templates/: gitconfig
tests/: test_klickbrick.py
